package factorymethod.secondhandtrade.trader;

public abstract class DefaultTrader implements Trader {
    protected int hopePrice;

}
